--- a/README
+++ b/README
@@ -1,10 +1,12 @@
-ln -s dotfiles/vimrc       .vimrc
 ln -s dotfiles/zshrc       .zshrc
-ln -s dotfiles/tmux.conf   .tmux.conf
-ln -s dotfiles/gitconfig   .gitconfig
-ln -s dotfiles/bashrc      .bashrc
-ln -s dotfiles/eclimrc     .eclimrc
-ln -s dotfiles/gtkrc-2.0   .gtkrc-2.0
-ln -s dotfiles/xbindkeysrc .xbindkeysrc
-ln -s dotfiles/xinitrc     .xinitrc
 ln -s dotfiles/xresources  .xresources
+ln -s dotfiles/xinitrc     .xinitrc
+ln -s dotfiles/xbindkeysrc .xbindkeysrc
+ln -s dotfiles/vimrc       .vimrc
+ln -s dotfiles/vim         .vim
+ln -s dotfiles/tmux.conf   .tmux.conf
+ln -s dotfiles/README      .README
+ln -s dotfiles/gtkrc-2.0   .gtkrc-2.0
+ln -s dotfiles/gitconfig   .gitconfig
+ln -s dotfiles/eclimrc     .eclimrc
+ln -s dotfiles/bashrc      .bashrc
